// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentCard > renders correctly with all directions > renders correctly direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <img
          alt=""
          class="uv_zkabs0d uv_zkabs0c"
          height="120"
          src="/src/components/ContentCard/assets/illustration.png"
          style="--uv_zkabs00: none;"
        />
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and loading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="uv_zkabs0h uv_zkabs0g uv_c2hb451"
          style="--uv_zkabs01: 120px; --uv_zkabs02: 100%;"
        >
          <div
            class="uv_fr4c0tk"
          />
          <div
            class="uv_c2hb452"
          />
        </div>
        <div
          class="uv_zkabs0j uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
      >
        <img
          alt=""
          class="uv_zkabs0e uv_zkabs0c"
          src="/src/components/ContentCard/assets/illustration.png"
          style="--uv_zkabs00: none;"
          width="220"
        />
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and loading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="uv_zkabs0i uv_zkabs0g uv_c2hb451"
          style="--uv_zkabs01: unset; --uv_zkabs02: 220px;"
        >
          <div
            class="uv_fr4c0tk"
          />
          <div
            class="uv_c2hb452"
          />
        </div>
        <div
          class="uv_zkabs0j uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                This is the children of the component
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      disabled=""
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow22"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with empty string title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="uv_zkabs03 uv_zkabs04"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs09 uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="uv_zkabs06 uv_toi52u0 uv_toi52u11 uv_toi52u2d uv_toi52u31 uv_toi52u61"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="uv_zkabs05"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  OpenInNewIcon
                </title>
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="uv_zkabs03 uv_zkabs04"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0b uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="uv_zkabs07 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u6p"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="uv_zkabs05"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  OpenInNewIcon
                </title>
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and target 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="uv_zkabs03 uv_zkabs04"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs09 uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="uv_zkabs06 uv_toi52u0 uv_toi52u11 uv_toi52u2d uv_toi52u31 uv_toi52u61"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="uv_zkabs05"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  OpenInNewIcon
                </title>
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with image, title, description, subtitle and icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <img
          alt=""
          class="uv_zkabs0d uv_zkabs0c"
          height="120"
          src="/src/components/ContentCard/assets/illustration.png"
          style="--uv_zkabs00: none;"
        />
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            /src/components/ContentCard/assets/illustration.png
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <small
                    class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  >
                    sub title test
                  </small>
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
                <p
                  class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owk uv_m4c9ow1a uv_m4c9ow32"
                >
                  this is a description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with onClick 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="uv_zkabs03 uv_zkabs04"
      role="button"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with required title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with title with custom tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_zkabs03"
      target="_blank"
    >
      <div
        class="uv_zkabs0f uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_zkabs0a uv_zkabs08 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h1
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                  >
                    test
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
